syntax = "proto3";
package axelar.vote.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/vote/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "axelar/permission/exported/v1beta1/types.proto";
import "amino/amino.proto";

option (gogoproto.goproto_getters_all) = false;

message VoteRequest {
  option (amino.name) = "vote/Vote";
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  option (cosmos.msg.v1.signer) = "sender";

  reserved 2, 3; // poll_key and vote were removed in v0.20

  reserved 1; // used to be sender bytes with AccAddress cast
  uint64 poll_id = 4 [
    (gogoproto.customname) = "PollID",
    (gogoproto.customtype) =
        "github.com/axelarnetwork/axelar-core/x/vote/exported.PollID",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Any vote = 5 [ (cosmos_proto.accepts_interface) =
                                     "github.com/cosmos/codec/ProtoMarshaler" ];
  string sender = 6 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}

message VoteResponse { string log = 1; }
